tdf#112006: the result is different using getFirstSeries

Restore the old code and use c++11 for-statement

Change-Id: If85793d03fc9f022a938bcd365c605a7ddac2720
Reviewed-on: https://gerrit.libreoffice.org/42031
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>
(cherry picked from commit 493d10b828ec475f63d399a98ba9b55b9766ee25)